<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- кнопки меню-->
    <item android:id="@+id/bluetooth_connect"
        android:title="@string/menu_connect"
        android:icon="@drawable/connect_btn"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/bluetooth_list"
        android:title="@string/menu_list_devices"
        android:icon="@drawable/list_btn"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/bluetooth_check"
        android:title="@string/menu_bluetooth"
        android:icon="@drawable/bluetooth_off"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"/>

</menu>